# rayongolem-sd-poc

./: .gitignore  pyproject.toml  sdpoc.yaml
ray-sd/: CPU.Dockerfile
ray-sd-image/: base-cpu.Dockerfile  base-gpu.Dockerfile  build-cpu.sh  ray-on-golem.Dockerfile  ray-sd.Dockerfile  ray-sd.requirements.txt
scripts/: test_sd.py
