[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rayongolem-sd-poc"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@wave460.net>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
gvmkit-build = "^0.3.18"
ray-on-golem = {version = "^0.10.0", source = "test-pypi"}
